2009-09-30  Gabriel Dos Reis  <gdr@cs.tamu.edu>

	* decl.c (check_for_uninitialized_const_var): Check constexpr
	variables too.
	(build_ptrmemfunc_type): Make the result a literal type.
	(build_ptrmem_type): Likewise.
	(grokdeclarator): Handle `constexpr'.
	(check_tag_decl): Reject `constexpr'.
	(check_function_type): Check constexpr functions.
	* cp-tree.h (ds_constexpr): New cp_decl_spec enumerator.
	(CLASSTYPE_LITERAL_P): New.
	(lang_type_class::is_literal): New.
	(lang_type_class::dummy): Adjust width.
	(literal_type_p): Declare.
	* parser.c (cp_parser_check_decl_spec): Print it.
	(cp_parser_decl_specifier_seq): Accept "constexpr".
	* semantics.c (validate_constexpr_fundecl): Define.
	(literal_type_p): Define.

2009-09-30  Jason Merrill  <jason@redhat.com>

	* semantics.c (lambda_expr_this_capture): Fix default capture
	of explicit capture of 'this'.

2009-09-30  Jason Merrill  <jason@redhat.com>

	* parser.c (cp_parser_lambda_expression): Don't add __ to __this.

2009-09-30  Jason Merrill  <jason@redhat.com>

	* cp-tree.h (LANG_DECL_U2_CHECK): Check LANG_DECL_HAS_MIN.

2009-09-29  John Freeman  <jfreeman08@gmail.com>
	    Jason Merrill  <jason@redhat.com>

	Add support for lambda-expressions as per N2927.
	* cp-tree.def (VEC_INIT_EXPR, LAMBDA_EXPR): New.
	* cp-tree.h (LAMBDA_TYPE_P, LAMBDA_FUNCTION_P): New.
	(LAMBDA_EXPR_DEFAULT_CAPTURE_MODE): New.
	(LAMBDA_EXPR_DEFAULT_CAPTURE_LIST): New.
	(LAMBDA_EXPR_THIS_CAPTURE, LAMBDA_EXPR_CAPTURES_THIS_P): New.
	(LAMBDA_EXPR_MUTABLE_P, LAMBDA_EXPR_DEDUCE_RETURN_TYPE_P): New.
	(LAMBDA_EXPR_RETURN_TYPE, LAMBDA_EXPR_LOCATION): New.
	(LAMBDA_EXPR_EXTRA_SCOPE, LAMBDA_EXPR_DISCRIMINATOR): New.
	(struct tree_lambda_expr): New.
	(union lang_tree_node): Add lambda_expression.
	(struct lang_type_class): Add lazy_move_ctor flag, lambda_expr field.
	(CLASSTYPE_LAZY_MOVE_CTOR, CLASSTYPE_LAMBDA_EXPR): New.
	(LAMBDA_TYPE_EXTRA_SCOPE, VEC_INIT_EXPR_SLOT): New.
	(VEC_INIT_EXPR_INIT, DECLTYPE_FOR_LAMBDA_CAPTURE): New.