@@ -1,3 +1,13 @@
+2009-10-01  Jason Merrill  <jason@redhat.com>
+
+	* pt.c (register_specialization): Push DECL_SOURCE_LOCATION to the
+	clones.
+
+	* decl.c (grok_special_member_properties): Only adjust
+	TYPE_HAS_COMPLEX_* if the function is defaulted in the class body.
+	(cp_finish_decl): Push DECL_DELETED_FN/DECL_DEFAULTED_FN to the
+	clones.
+
 2009-09-30  Gabriel Dos Reis  <gdr@cs.tamu.edu>
 
 	* decl.c (check_for_uninitialized_const_var): Check constexpr
